# docs/swagger.json
@@ -489,6 +489,59 @@
                     }
                 }
             }
+        },
+        "/{user_id}/public_key": {
+            "get": {
+                "description": "Get user public key",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Get user public key",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User public key retrieved successfully",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid user ID",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Service unavailable",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -515,7 +568,16 @@
                 "chat_id": {
                     "type": "integer"
                 },
+                "content": {
+                    "type": "string"
+                },
                 "created_at": {
+                    "type": "string"
+                },
+                "encrypted_key": {
+                    "type": "string"
+                },
+                "encrypted_key_sender": {
                     "type": "string"
                 },
                 "expired_at": {
@@ -532,9 +594,6 @@
                 },
                 "sender_name": {
                     "type": "string"
-                },
-                "text": {
-                    "type": "string"
                 }
             }
         },
@@ -549,6 +608,9 @@
                 },
                 "id": {
                     "type": "integer"
+                },
+                "public_key": {
+                    "type": "string"
                 },
                 "updated_at": {
                     "type": "string"
@@ -629,6 +691,7 @@
             "required": [
                 "email",
                 "password",
+                "public_key",
                 "username"
             ],
             "properties": {
@@ -638,6 +701,9 @@
                 "password": {
                     "type": "string",
                     "minLength": 8
+                },
+                "public_key": {
+                    "type": "string"
                 },
                 "username": {
                     "type": "string"
@@ -653,8 +719,17 @@
                 "content": {
                     "type": "string"
                 },
+                "encrypted_key": {
+                    "type": "string"
+                },
+                "encrypted_key_sender": {
+                    "type": "string"
+                },
                 "sender_id": {
                     "type": "integer"
+                },
+                "sender_name": {
+                    "type": "string"
                 }
             }
         }
