# internal/domain/models/user.go
@@ -10,5 +10,6 @@ type User struct {
 	Password  string    `json:"-" db:"password"` // Password is not exposed in JSON responses
 	CreatedAt time.Time `json:"created_at" db:"created_at"`
 	UpdatedAt time.Time `json:"updated_at" db:"updated_at"`
+	PublicKey string    `json:"public_key" db:"public_key"`
 }
 
